fix contact img container size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -355,6 +355,7 @@ li:active {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 5px;
 }
 
 #dispPhone {
@@ -477,6 +478,9 @@ footer {
             margin-right: 20px;
         }
         /*contact section*/
+        #contactImages {
+            height: 10vh;
+        }
         #contactImages img:hover {
             background-color: none;
             transform: scale(1.0) rotate(0deg);
@@ -566,6 +570,9 @@ footer {
         margin-right: 20px;
     }
     /*contact section*/
+    #contactImages {
+        height: 15vh;
+    }
     #contactImages img {
         width: 20vw;
         margin-left: 10px;
